--- a/client/layout.jade
+++ b/client/layout.jade
@@ -3,7 +3,7 @@ html(ng-app="blogApp")
   head
     meta(charset='utf8')
     base(href='/')
-    title Angular Express Seed App
+    title SQL-Express-AngularJS Example App
     link(rel='stylesheet', href='/css/app.css')
   body
     block body
