--- a/client/index.jade
+++ b/client/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block body
   div
-    h2 My Blog
+    h2 SQL + Express + Angular Blog Example
     ul
       li
         a(href='/') Home
